--- a/styles/main.css
+++ b/styles/main.css
@@ -8,39 +8,43 @@ html {
 }
 
 * {
-    margin: 0;  
+    margin: 0;
     padding: 0;
 }
 
 body {
     background: #f0f0f5;
-    -webkit-font-smoothing: antialiased;  
+    -webkit-font-smoothing: antialiased;
 }
 
-a { 
+a {
     text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: var(--title-color);
     font-family: 'Ubuntu', sans-serif;
 }
+
 
 /* BOX MODEL */
 
 #page-home {
     height: 100vh;
-
-    background: url('../assets/home-background.svg') no-repeat ;
+    background: url('../assets/home-background.svg') no-repeat;
     background-position: 35vw bottom;
 }
 
 #page-home header {
-   margin-top: 48px;
-   
-   display: flex;
-   align-items: center;
-   justify-content: space-between
+    margin-top: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between
 }
 
 #page-home .content {
@@ -51,14 +55,12 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     margin: 0 auto;
     height: 100%;
-    display: flex;  
+    display: flex;
     flex-direction: column;
-    
 }
 
 #page-home header a {
     display: flex;
-
     color: var(--title-color);
     font-weight: 700;
 }
@@ -78,11 +80,9 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     justify-content: center;
     height: 600px;
-    
     display: flex;
     flex-direction: column;
-
-    justify-content: center;    
+    justify-content: center;
 }
 
 #page-home main h1 {
@@ -103,23 +103,18 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: center;
     margin-top: 40px;
-
     background-color: var(--primary-color);
     transition: 400ms;
     font-weight: bold;
-    color: white; 
-    
-    
+    color: white;
 }
 
 #page-home main a:hover {
-    background-color: #2fb86e;   
+    background-color: #2fb86e;
 }
 
 #page-home main a span {
     width: 72px;
     height: 72px;
-
     background-color: rgba(0, 0, 0, 00.8);
-
 }
